restructuration du code et refonte code style

--- a/templates/Compte/administrateur/GestionUtilisateurs/AjoutUtilisateur.html.twig
+++ b/templates/Compte/administrateur/GestionUtilisateurs/AjoutUtilisateur.html.twig
@@ -7,7 +7,7 @@
     <h1>Ajouter un nouvel Utilisateur</h1>
 
     {{ include('Compte/administrateur/GestionUtilisateurs/FormAjoutUtilisateur.html.twig') }}
-<div class="Retour">
+<div class="RetourUtilisateur">
     <a href="{{ path('Administrateur_ListeUtilisateurs') }}">Revenir a la liste des Utilisateurs</a>
 </div>
 {% endblock %}
