--- a/templates/Compte/commande/DetailCommande.html.twig
+++ b/templates/Compte/commande/DetailCommande.html.twig
@@ -72,7 +72,7 @@
         </div>
      {% elseif is_granted('ROLE_USER') %}
      <div class="Retour">
-            <a href="{{ path('Compte_Espace') }}" class="btn btn-secondary">Revenir dans mon compte</a>
+            <a href="{{ path('Compte_UtilisateurHistoriqueCommande') }}" class="btn btn-secondary">Historique de commande</a>
         </div>
     {% endif %}
 </div>
