--- a/templates/Compte/utilisateurs/ModifInfosPersos.html.twig
+++ b/templates/Compte/utilisateurs/ModifInfosPersos.html.twig
@@ -4,7 +4,7 @@
     <title>Mofif Infos Persos</title>
 
     <!-- Body -->
-        <h1>Modifier mes informations personnelles</h1>
+        <h1 class="TitreModifInfosPersos">Modifier mes informations personnelles</h1>
     <div class="FormulaireModifInfos">
             {{form(form)}}
     </div>
