--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,11 +8,11 @@
 
 
         <h1>Se connecter</h1>
-<div class="Email">
+<div class="EmailConnexion">
         <label for="inputEmail">Email</label>
         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="" autocomplete="email" required autofocus>
 </div>
-<div class="Mdp">
+<div class="MdpConnexion">
         <label for="inputPassword">Mot de passe</label>
         <input type="password" name="password" id="inputPassword" class="" autocomplete="current-password" required>
        
