--- a/public/CSS/Header.css
+++ b/public/CSS/Header.css
@@ -15,3 +15,19 @@ body {
 
 
 /* Fin de la barre de nav */
+
+/* NavBar Compte Utilisateurs / Administrateur */
+.navbar-compte .nav-link {
+  color: white;
+}
+
+.navbar-compte .nav-link:hover {
+  background-color: #154364; /* même effet que ta 1ère navbar */
+  color: white;
+}
+
+.navbar-compte .nav-item {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+/* Fin NavBar Compte Utilisateur / Administrateur */
