--- a/templates/Compte/administrateur/GestionProduits/ListeProduits.html.twig
+++ b/templates/Compte/administrateur/GestionProduits/ListeProduits.html.twig
@@ -4,22 +4,9 @@
 
 {% block body %}
  <link rel="stylesheet" href={{ asset('CSS/Admin.css') }}>
-<h1>Liste des Produits</h1>
 
-<div class='Droite'>
-            <div class="ListeUtilisateurs">
-                <a href={{ path('Administrateur_ListeUtilisateurs') }}>Liste des Utilisateurs</a>
-            </div>
-            <div class="ListeProduits">
-                <a href="#">Liste des produits</a>
-            </div>
-            <div class="HistoriqueCommandes">
-                <a href={{ path('Compte_UtilisateurHistoriqueCommande') }}>Historique des Commandes des utilisateurs</a>
-            </div>
-            <div class="BoiteReception">
-                <a href={{ path('Compte_BoiteReception') }}>Boite de Reception</a>
-            </div>
-        </div> {# Fin div Droite #}
+ {% include 'partials/_navCompte.html.twig' %}
+<h1>Liste des Produits</h1>
 
 <table class="liste_produits">
     <thead>
