--- a/templates/Compte/administrateur/GestionProduits/ModifierProduit.html.twig
+++ b/templates/Compte/administrateur/GestionProduits/ModifierProduit.html.twig
@@ -3,15 +3,22 @@
 {% block title %}Modifier Produit{% endblock %}
 
 {% block body %}
- <link rel="stylesheet" href={{ asset('CSS/Admin.css') }}>
-<h1>Modifier le produit</h1>
+<link rel="stylesheet" href="{{ asset('CSS/Admin.css') }}">
 
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn btn-success">Mettre à jour</button>
-{{ form_end(form) }}
+<h1 class="titremodifierproduit">Modifier le produit</h1>
 
-<div class="Retour">
-<a href="{{ path('Administrateur_ListeProduits') }}" class="btn btn-secondary mt-2">Retour à la liste</a>
+<div class="formmodifierproduit">
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <button class="btn-mettre-a-jour">Mettre à jour</button>
+    {{ form_end(form) }}
+</div>
+
+<div class="actionmodifierproduit">
+    <div class="retourproduit">
+        <a href="{{ path('Administrateur_ListeProduits') }}" class="lienretourlisteproduit">
+            Retour à la liste
+        </a>
+    </div>
 </div>
 {% endblock %}
