--- a/templates/Compte/utilisateurs/infospersos.html.twig
+++ b/templates/Compte/utilisateurs/infospersos.html.twig
@@ -11,24 +11,10 @@
     <title>{% block title %}Informations Personnelles{% endblock %}</title>
 </head>
 <body>
-
-    <h1>Mes Informations Personnelles</h1> 
-        <div class='Droite'>
-            <div class="InfosPersos">
-                <a href="#">Mes Informations Personnelles</a>
-            </div>
-            <div class="Retractation">
-                <a href={{ path('Compte_FormRetractation') }}>Formulaire de retour</a>
-            </div>
-            <div class="HistoriqueDeCommandes">
-                <a href={{ path('Compte_UtilisateurHistoriqueCommande') }}>Historique de vos Commandes</a>
-            </div>
-            <div class="BoiteReception">
-                <a href={{ path('Compte_BoiteReception') }}>Boite de Reception</a>
-            </div>
-        </div> {# Fin div Droite #}
+{% include 'partials/_navCompte.html.twig' %}
 
         {# recupere les infos de l'utilisateur connecter#}
+            <h1 class="TitreInfosPersos">Mes Informations Personnelles</h1> 
         <div class="CadreInfosPersos"> <br>
             <p> Nom : {{app.User.Nom}} </p> <br>  
             <p> Prenom : {{app.User.Prenom}} </p> <br>
