Securisation du projet

--- a/templates/Compte/administrateur/GestionProduits/AjoutProduit.html.twig
+++ b/templates/Compte/administrateur/GestionProduits/AjoutProduit.html.twig
@@ -8,7 +8,7 @@
 <h1 class="titreajoutproduit">Ajouter un produit</h1>
 
 <div class="formnouveauproduit">
-    {{ form_start(form) }}
+    {{ form_start(form) }}  {# Protection Failles CSRF #}
         {{ form_widget(form) }}
         <button class="btnajouterproduit">Ajouter</button>
     {{ form_end(form) }}
