--- a/templates/Compte/administrateur/GestionProduits/ListeProduits.html.twig
+++ b/templates/Compte/administrateur/GestionProduits/ListeProduits.html.twig
@@ -35,7 +35,7 @@
             </td>
             <td>
                 <form method="post" action="{{ path('Administrateur_SupprimerProduit', {id: produit.id}) }}" style="display:inline-block" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce produit ? Cette action est définitive');">
-                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ produit.id) }}">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ produit.id) }}"> {# Protections CSRF #}
                     <button class="">Supprimer</button>
                 </form>
             </td>
