--- a/templates/Compte/administrateur/GestionUtilisateurs/formModif.html.twig
+++ b/templates/Compte/administrateur/GestionUtilisateurs/formModif.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+    {{ form_widget(form) }} {# Protection  #}
     <div class="modifier">
     <button class="btn-modifier">{{ button_label|default('Save') }}</button>
     </div>
