--- a/templates/Compte/administrateur/GestionUtilisateurs/AjoutUtilisateur.html.twig
+++ b/templates/Compte/administrateur/GestionUtilisateurs/AjoutUtilisateur.html.twig
@@ -7,7 +7,12 @@
 <h1 class="titreAjoutUtilisateurs">Ajouter un nouvel Utilisateur</h1>
 
 <div class="formulaireAjoutUtilisateurs">
-    {{ include('Compte/administrateur/GestionUtilisateurs/FormAjoutUtilisateur.html.twig') }}
+    {{ form_start(FormAjout, { 'attr': {'class': 'form-ajout-utilisateur'} }) }}
+        {{ form_widget(FormAjout) }}
+        <div class="ajouter">
+            <button class="btn_ajout">{{ button_label|default('Ajouter') }}</button>
+        </div>
+    {{ form_end(FormAjout) }}
 </div>
 
 <div class="actionsAjoutUtilisateurs">
