--- a/templates/Compte/administrateur/GestionUtilisateurs/FormSupprimer.html.twig
+++ b/templates/Compte/administrateur/GestionUtilisateurs/FormSupprimer.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('Administrateur_SupprimerUtilisateur', {'id': utilisateur.id}) }}" onsubmit="return confirm('Etes vous sur de vouloir supprimer cet utilisateur ?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ utilisateur.id) }}">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ utilisateur.id) }}"> {# Protection CSRF #}
     <button class="btn_supprimer">Supprimer</button>
 </form>
